NetBSD Problem Report #46647
From www@NetBSD.org Sun Jul 1 18:22:22 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
by www.NetBSD.org (Postfix) with ESMTP id CA60963B882
for <gnats-bugs@gnats.NetBSD.org>; Sun, 1 Jul 2012 18:22:21 +0000 (UTC)
Message-Id: <20120701182221.3992563B85F@www.NetBSD.org>
Date: Sun, 1 Jul 2012 18:22:21 +0000 (UTC)
From: dross@pobox.com
Reply-To: dross@pobox.com
To: gnats-bugs@NetBSD.org
Subject: Menu borders in sysinst appear as characters with diacritical marks instead of graphics characters
X-Send-Pr-Version: www-1.0
>Number: 46647
>Category: port-atari
>Synopsis: Menu borders in sysinst appear as characters with diacritical marks instead of graphics characters
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: tsutsui
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Jul 01 18:25:00 +0000 2012
>Closed-Date: Sat Jun 25 12:38:07 +0000 2022
>Last-Modified: Sun Sep 11 18:15:01 +0000 2022
>Originator: David Ross
>Release: 6 BETA2
>Organization:
>Environment:
>Description:
The "graphics" characters in sysinst currently display as letters with diacritical marks. These are the text characters that are used to properly display menu borders and such. It's a very minor fit & finish issue, but worth mentioning.
I believe this regressed since NetBSD 5.
>How-To-Repeat:
Boot up netbsd 6 on an atari and try sysinst. Observe the menu borders are letters with diacritical marks, instead of graphics characters. This should be obvious when you go into sysinst, but let me know and I can send a screen shot as necessary.
>Fix:
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: port-atari-maintainer->tsutsui
Responsible-Changed-By: tsutsui@NetBSD.org
Responsible-Changed-When: Sun, 19 Jun 2022 15:28:57 +0000
Responsible-Changed-Why:
I'm working on this.
State-Changed-From-To: open->analyzed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 19 Jun 2022 15:28:57 +0000
State-Changed-Why:
https://mail-index.netbsd.org/port-atari/2022/06/19/msg000608.html
From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/46647 CVS commit: src/sys/arch/atari/dev
Date: Sat, 25 Jun 2022 03:33:29 +0000
Module Name: src
Committed By: tsutsui
Date: Sat Jun 25 03:33:29 UTC 2022
Modified Files:
src/sys/arch/atari/dev: ite.c ite_cc.c ite_et.c itevar.h
Log Message:
Add a minimum DEC special graphics character support for atari ite(4).
This closes PR port-atari/46647 (Menu borders in sysinst appear as
characters with diacritical marks instead of graphics characters).
Switching encoding support by "ESC ( <F>" sequence for vt220 was
pulled from x68k ite(4) (that already supports ISO-2022-JP and EUC-JP).
Note atari's fonts already include DEC special graphics characters.
ET4000 on Hades is untested due to long-term lack of hardware.
Discussed on port-atari@ etc.
To generate a diff of this commit:
cvs rdiff -u -r1.81 -r1.82 src/sys/arch/atari/dev/ite.c
cvs rdiff -u -r1.44 -r1.45 src/sys/arch/atari/dev/ite_cc.c
cvs rdiff -u -r1.35 -r1.36 src/sys/arch/atari/dev/ite_et.c
cvs rdiff -u -r1.14 -r1.15 src/sys/arch/atari/dev/itevar.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: analyzed->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sat, 25 Jun 2022 12:38:07 +0000
State-Changed-Why:
Now TT030 (and Falcon) kernels supports DEC special graphics properly.
Thanks for the PR to keep this in my mind.
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/46647 CVS commit: [netbsd-9] src/sys/arch/atari/dev
Date: Sun, 11 Sep 2022 18:10:23 +0000
Module Name: src
Committed By: martin
Date: Sun Sep 11 18:10:23 UTC 2022
Modified Files:
src/sys/arch/atari/dev [netbsd-9]: ite.c ite_cc.c ite_et.c itevar.h
Log Message:
Pull up following revision(s) (requested by tsutsui in ticket #1518):
sys/arch/atari/dev/ite.c: revision 1.82
sys/arch/atari/dev/ite_cc.c: revision 1.45
sys/arch/atari/dev/ite_et.c: revision 1.36
sys/arch/atari/dev/itevar.h: revision 1.15
Add a minimum DEC special graphics character support for atari ite(4).
This closes PR port-atari/46647 (Menu borders in sysinst appear as
characters with diacritical marks instead of graphics characters).
Switching encoding support by "ESC ( <F>" sequence for vt220 was
pulled from x68k ite(4) (that already supports ISO-2022-JP and EUC-JP).
Note atari's fonts already include DEC special graphics characters.
ET4000 on Hades is untested due to long-term lack of hardware.
Discussed on port-atari@ etc.
To generate a diff of this commit:
cvs rdiff -u -r1.79 -r1.79.2.1 src/sys/arch/atari/dev/ite.c
cvs rdiff -u -r1.40 -r1.40.2.1 src/sys/arch/atari/dev/ite_cc.c
cvs rdiff -u -r1.31 -r1.31.2.1 src/sys/arch/atari/dev/ite_et.c
cvs rdiff -u -r1.14 -r1.14.58.1 src/sys/arch/atari/dev/itevar.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.