sys/arch/atari/dev/ite_et.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: ite_et.c,v 1.35 2022/03/28 12:38:58 riastradh Exp $	*/
+/*	$NetBSD: ite_et.c,v 1.36 2022/06/25 03:33:29 tsutsui Exp $	*/
 
 /*
  * Copyright (c) 1996 Leo Weppelman.
@@ -26,7 +26,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: ite_et.c,v 1.35 2022/03/28 12:38:58 riastradh Exp $");
+__KERNEL_RCSID(0, "$NetBSD: ite_et.c,v 1.36 2022/06/25 03:33:29 tsutsui Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -489,6 +489,16 @@ et_putc(struct ite_softc *ip, int c, int dy, int dx, int mode)
 	view_t	*v   = viewview(ip->grf->g_viewdev);
 	u_char	attr;
 	u_short	*cp;
+
+	/*
+	 * Handle DEC special graphics character by 'ESC ( B' sequence.
+	 * Note we assume all font data (fontdata_8x8 and fontdata_8x16)
+	 * contain DEC graphics glyph (for 0x5f to 0x7e) at 0x00 to 0x1F.
+	 */
+	if (*ip->GL == CSET_DECGRAPH) {
+		if (ip->font.font_lo == 0 && c >= 0x5f && c <= 0x7e)
+			c -= 0x5f;
+	}
 
 	attr = (unsigned char) ((mode & ATTR_INV) ? (0x70) : (0x07));
 	if (mode & ATTR_UL)     attr |= 0x01;
